objects/Interaction__c.object
<CustomObject>
    <description>Interaction with candidate</description>
    <fields>
        <fullName>Candidate_Id__c</fullName>
        <label>Candidate Id</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>InterviewResults</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Interactive date</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview Id</label>
        <referenceTo>Interview__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether candidate pass the interview</description>
        <label>Is Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face-to-face Discussion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengh__c</fullName>
        <label>Strengh</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weakness__c</fullName>
        <label>Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Interaction</label>
    <nameField>
        <label>Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>